apps/the-race-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-race-service
  namespace: the-race-service
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels: { app: the-race-service }
  template:
    metadata:
      labels: { app: the-race-service }
    spec:
      containers:
        - name: the-race-service
          image: ghcr.io/the-algovn/the-race-service:main
          ports:
            - { containerPort: 9390, name: grpc }
          readinessProbe:
            grpc: { port: 9390 }
            initialDelaySeconds: 5
          livenessProbe:
            grpc: { port: 9390 }
            initialDelaySeconds: 10
          resources:
            requests: { cpu: 50m, memory: 64Mi }
            limits: { memory: 256Mi }
      imagePullSecrets:
        - name: registry-creds
